# warparty

./: .dockerignore  .env.example  .gitignore  DEVELOPER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  container.yml
app/: __init__.py  config.py  constants.py  database.py  main.py  models.py  planner.py  realtime.py  schemas.py  security.py
app/routers/: __init__.py  api.py  pages.py  ws.py
app/services/: __init__.py  errors.py  invites.py  parties.py  players.py  routes.py  serializers.py  warplans.py
app/static/css/: pure-min.css  warparty.css
app/static/icons/favicon/: site.webmanifest
app/static/icons/warplan/: README.md
app/templates/: base.html  error.html  index.html  join.html  my_warplan.html  party.html  party_access_denied.html
app/templates/partials/: clear_plan_modal.html  leave_party_modal.html  next_action.html  party_access_denied.html  party_live.html  player_card.html  remove_player_modal.html  route_list.html  transfer_leader_modal.html  warplan_modal.html
scripts/: dev-start.bat  dev-start.sh  docker_entrypoint.py
tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_docker_entrypoint.py  test_pages.py  test_party_flow.py  test_planner.py  test_progress_rules.py  test_realtime.py
