[project]
name = "warparty"
version = "0.1.0"
description = "A lightweight private web app for coordinating Diablo-style War Plan routes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "PolyForm Noncommercial License 1.0.0" }
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*.html", "static/**/*"]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
